<resources>
    <string name="app_name">JourneyTracking</string>
    <string name="title_activity_tracking">Maps</string>
    <string name="start_tracking">Start</string>
    <string name="stop_tracking">Stop</string>
    <string name="ride_history">Ride History</string>
    <string name="notification_text">Tap to open</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ride_id">Ride ID:</string>
    <string name="date">Date:</string>
    <string name="start_time">Start Time:</string>
    <string name="end_time">End Time:</string>
    <string name="distance">Total Distance (Km):</string>
    <string name="ride_details"># </string>
    <string name="time_taken">Time Taken:</string>
    <string name="distance_km">Distance (Km):</string>
    <string name="ride_tracker">Ride Tracker</string>
    <string name="location_error">Error fetching your location</string>
    <string name="logo_timer">timer logo</string>
    <string name="logo_distance">distance logo</string>
    <string name="static_map_polyline">static map polyline</string>
    <string name="static_map_marker">static map marker</string>
</resources>
