<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#FF9800"
        app:strokeWidth="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageViewRide"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/static_map_marker"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/labelRideId"
                app:srcCompat="@drawable/common_google_signin_btn_icon_dark" />

            <TextView
                android:id="@+id/labelRideId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/ride_id"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageViewRide"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewRideId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/labelRideId"
                app:layout_constraintTop_toTopOf="@+id/labelRideId"
                tools:text="@string/ride_id" />

            <TextView
                android:id="@+id/labelDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/date"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/textViewDate"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textViewRideId"
                app:layout_constraintTop_toTopOf="@+id/textViewRideId" />

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/labelDate"
                tools:text="dd/mm/yy" />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintStart_toEndOf="@+id/imageViewRide"
                app:layout_constraintTop_toBottomOf="@+id/labelRideId" />

            <TextView
                android:id="@+id/labelStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/start_time"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/labelRideId"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <TextView
                android:id="@+id/textViewStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/labelStartTime"
                app:layout_constraintTop_toTopOf="@+id/labelStartTime"
                tools:text="@string/start_time" />

            <TextView
                android:id="@+id/labelEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/end_time"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/labelStartTime"
                app:layout_constraintTop_toBottomOf="@+id/labelStartTime" />

            <TextView
                android:id="@+id/textViewEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/labelEndTime"
                app:layout_constraintTop_toTopOf="@+id/labelEndTime"
                tools:text="@string/end_time" />

            <View
                android:id="@+id/divider2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintStart_toEndOf="@+id/imageViewRide"
                app:layout_constraintTop_toBottomOf="@+id/labelEndTime" />

            <TextView
                android:id="@+id/labelDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/distance"
                android:textColor="@color/design_default_color_primary_dark"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/labelEndTime"
                app:layout_constraintTop_toBottomOf="@+id/divider2" />

            <TextView
                android:id="@+id/textViewDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toEndOf="@+id/labelDistance"
                app:layout_constraintTop_toTopOf="@+id/labelDistance"
                tools:text="@string/distance" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>